--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
+    <Compile Include="Classes\Animal.cs" />
     <Compile Include="Enum\Diet.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,8 +56,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Train.cs" />
-    <Compile Include="Wagon.cs" />
+    <Compile Include="Classes\Train.cs" />
+    <Compile Include="Classes\Wagon.cs" />
     <Compile Include="Enum\Weight.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
