Added Train Class UnitTests

--- a/WindowsFormsApp1Tests/WindowsFormsApp1Tests.csproj
+++ b/WindowsFormsApp1Tests/WindowsFormsApp1Tests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Classes\AnimalTests.cs" />
+    <Compile Include="Classes\TrainTests.cs" />
     <Compile Include="Classes\WagonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
